--- a/templates/articles/news.html
+++ b/templates/articles/news.html
@@ -15,8 +15,8 @@
               <a href="#">{{ article.title }}</a>
             </h4>
             <p class="card-text">{{ article.text }}</p>
-            {% for scope in article.scopes.all %}
-              <span class="badge {% if scope.is_main %}badge-primary{% else %}badge-secondary{% endif %}">{{ scope.tag.name }}</span>
+            {% for article_tags in article.article_tags.all %}
+              <span class="badge {% if article_tags.is_main %}badge-primary{% else %}badge-secondary{% endif %}">{{ article_tags.tag.name }}</span>
             {% endfor %}
           </div>
         </div>
